--- a/Buoi_2/css/style.css
+++ b/Buoi_2/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 #nav li{
-    color: rgb(180, 233, 58);
+    color: white;
     height: 30px;
     background-color: black;
     display:inline-block;
@@ -12,9 +12,24 @@
     line-height: 30px;
     padding: 0px 24px;
     text-decoration: none;
+    text-align: center;
 }
 #about{
     color: red;
     background-color: yellow;
     font-size: 13px;
+}
+#footer{
+    text-align: center;
+   line-height: 40px;
+    height: 50px;
+    background-color: black;
+    color: white;
+}
+#bannner{
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
 }
