--- a/Buoi_2/css/style.css
+++ b/Buoi_2/css/style.css
@@ -1,35 +1,34 @@
 *{
-    padding: 0px;
     margin: 0px;
-    box-sizing: border-box;
+    padding: 0px;
 }
+body{
+    background-color: coral;
+}
+
+#header{
+    height: 44px;
+    width: auto;
+    background-color: black;
+}
+
+#header img{
+    width: 50px;
+    height: 44px;
+    opacity: 0.8;
+    display: inline-block;
+    
+}
+
+#nav{
+
+}
+
 #nav li{
-    color: white;
-    height: 30px;
-    background-color: black;
-    display:inline-block;
-    font-size: 20px;
-    line-height: 30px;
-    padding: 0px 24px;
+    
+    color:white;
+    display: inline-block;
+    margin: 10px;
+    cursor: pointer;
     text-decoration: none;
-    text-align: center;
-}
-#about{
-    color: red;
-    background-color: yellow;
-    font-size: 13px;
-}
-#footer{
-    text-align: center;
-   line-height: 40px;
-    height: 50px;
-    background-color: black;
-    color: white;
-}
-#bannner{
-    text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
 }
